Half way through the landing page, added some asstes

--- a/views/landing_page.html
+++ b/views/landing_page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/landing_page.css">
 </head>
-<body>
+<body >
     <header class="header ">
         <div id="logo" class="">
             <img src="../assets/logo.svg" id="logo-img" alt="Logo">
@@ -15,10 +15,32 @@
         </div>
 
         <!-- Button not finished -->
-        <a href="./login_page.html" id="start" class="">
-            <h1 class="poppins-bold">Get Started</h1>
-            <div id="ball"></div>
-        </a>
+        <div class="button-case">
+            <a href="./login_page.html" id="start" class="">Get Started</a>
+        </div>
     </header>
+
+    <section class="hero-section">
+        <div class="">
+            <img src="../assets/Hero Text.svg" alt="" id="hero-text" class="">
+            <img src="../assets/Vector.svg" alt="" id="hero-vector" class="">
+        </div>
+    </section>
+
+    <div class="bg1">
+        <section class="decor-section">
+            <p class="poppins-medium scroll-text ">Scroll to Find More</p>
+            <img src="../assets/Line.svg" alt="" id="line-decor" class="">
+            <img src="../assets/Line2.svg" alt="" id="line-decor2" class="">
+            <img src="../assets/Mic n Bubble.svg" alt="" id="mic-bubble" class="">
+        </section>
+        <section class="support-section">
+            <img src="../assets/Support-hero.svg" alt="" class="support-vector">
+            <div class="support-text">
+                <h1 class="volkhov-bold">Tired of procrastination caused by <span id="block-text">social media</span> ?</h1>
+            </div>
+        </section>
+    </div>
+
 </body>
 </html>
