--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -1,21 +1,24 @@
-body{
+/* body{
     background-image: linear-gradient(to bottom, #031626, #3B76A1);
-}
+} */
 
 .header{
     position: fixed;
-    width: 100vw;
     height: 10vh;
-    padding: 33px 0px;
+    width: 100vw;
+    padding: 15px 0px;
     z-index: 10;
     display: flex;
+    align-items: center;
 }
+
 
 #logo{
     display: flex;
     align-items: center;
     width: 15%;
-    margin-left: 45px;
+    min-width: 125px;
+    margin-left: 2vw;
 }
 
 #logo-img{
@@ -27,29 +30,179 @@ body{
     margin-left: auto;
 }
 
-#start{
-    margin-left: auto;
-    margin-right: 45px;
+.button-case{
+    width: 12vw;
+    min-width: 128px;
     height: 71.5%;
-    overflow-y: hidden;
-    background-color: blue;
+    margin-left: auto;
+    margin-right: 2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#start{
+    background-color: #049DD9;
     border-radius: 12px;
-    /* padding: 12px 16px; */
-}
-
-#start h1{
-    /* border: 2px solid black; */
-    /* text-decoration: dotted; */
+    color: white;
+    font-size: clamp(1em, 1.5vw, 2.3em);
     text-align: center;
-    height: 50%;
+    width: 80%;
+    text-decoration: none;
+    padding: 0.35em 1em;
+    transition: 300ms;
 }
 
-#ball{
-    position: relative;
-    width: 30px;
-    height: 30px;
-    border-radius: 105%;
-    left: 43%;
-    top: 100%;
-    background-color: green;
+#start:hover{
+    width: 60%;
+    font-size: 100%;
 }
+
+.hero-section{
+    background-color: #031626;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.hero-section div{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#hero-text{
+    position:absolute;
+    top: 38%;
+    left: 12%;
+    transition: 100ms;
+}
+
+.bg1{
+    background-image: linear-gradient(to bottom, #031626, #3B76A1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.decor-section{
+    width: 100%;
+    height: 50vh;
+}
+
+.scroll-text{
+    position: relative;
+    top: -8%;
+    height: 10px;
+    font-size: 1.3em;
+    color: white;
+    padding-left: 3vw;
+}
+
+#line-decor{
+    padding-left: 9vw;
+    width: 70vw;
+    /* width: calc(clamp(10em, 60%, 100em) - 10%); */
+    /* height: ; */
+}
+
+#line-decor2{
+    display: none;
+}
+
+#mic-bubble{
+    position: relative;
+    width: 15vw;
+    margin-left: 2vw;
+    bottom: 2em ;
+}
+
+.support-section{
+    display: flex;
+    width: 90%;
+    
+}
+
+.support-vector{
+    width: 33%;
+}
+
+.support-text{
+    width: 60%;
+    margin-left: auto;
+    text-align: end;
+    color: white;
+}
+
+.support-text h1{
+    font-size: 3em;
+}
+
+#block-text{
+    
+    background-color: white;
+    color: #214b6a;
+    font-weight: bold;
+}
+
+@media screen and (max-width: 1153px) {
+    #mic-bubble{
+        display: none;
+    }
+
+    #line-decor{
+        width: 81%;
+    }
+}
+
+@media screen and (max-width: 780px) {
+    #hero-text{
+        top: 45%;
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    #hero-vector{
+        width: 100%;
+    }
+    
+    .header{
+        height: 5vh;
+    }
+
+    .decor-section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .scroll-text{
+        top: -15%;
+        text-align: center;
+        padding: 0px;
+    }
+
+    #line-decor{
+        display: none;
+    }
+
+
+    #line-decor2{
+        display: block;
+        height: 100%;
+    }
+
+    #mic-bubble{
+        position: relative;
+        display: block;
+        width: 35vw;
+        left: 31%;
+        top: -45%; 
+        margin: 0;
+    }
+}
+
