--- a/views/landing_page.html
+++ b/views/landing_page.html
@@ -27,20 +27,136 @@
         </div>
     </section>
 
-    <div class="bg1">
-        <section class="decor-section">
+    <div id="bg1">
+        <section class="decor-section ">
             <p class="poppins-medium scroll-text ">Scroll to Find More</p>
             <img src="../assets/Line.svg" alt="" id="line-decor" class="">
             <img src="../assets/Line2.svg" alt="" id="line-decor2" class="">
             <img src="../assets/Mic n Bubble.svg" alt="" id="mic-bubble" class="">
         </section>
-        <section class="support-section">
+        <section class="support-section ">
             <img src="../assets/Support-hero.svg" alt="" class="support-vector">
             <div class="support-text">
-                <h1 class="volkhov-bold">Tired of procrastination caused by <span id="block-text">social media</span> ?</h1>
+                <h1 class="volkhov-bold ">
+                    Tired of procrastination<br>
+                    caused by <span id="block-text">social media</span> ?
+                </h1>
+                <div class="gap-controll"></div>
+                <p class="poppins-regular support-sub-text ">Well, now, you can get the hottest news and updates about the people you follow without obscuring your activities.</p>
             </div>
         </section>
     </div>
 
+    <section id="bg2" class="">
+        <h1 class="poppins-bold">Start By Listening To The Top Creators</h1>
+        <div class="pills-container">
+            <div class="pill">
+                <img src="../assets/Deddi Corbuzier.jpeg" alt="" class="personal-pic">
+                <div class="items-container">
+                    <h2 class="poppins-medium ">On To The Gym</h2>
+                    <h4 class="poppins-medium username-pill ">Deddy Corbuzier</h4>
+                    <input class="timeline " type="range" value="0" min="0" max="100" />
+                    <h5 class="poppins-medium time-track">00.00 / 00.12</h5>
+                </div>
+                <div class="play-button-case ">
+                    <div class="play-button-container " onclick="this.classList.toggle('play-button-active')">
+                        <div class="play-button play-button-before"></div>
+                        <div class="play-button play-button-after"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="pill ">
+                <img src="../assets/Deddi Corbuzier.jpeg" alt="" class="personal-pic">
+                <div class="items-container ">
+                    <h2 class="poppins-medium ">On To The Gym</h2>
+                    <h4 class="poppins-medium username-pill ">Deddy Corbuzier</h4>
+                    <input class="timeline " type="range" value="0" min="0" max="100" />
+                    <h5 class="poppins-medium time-track ">00.00 / 00.12</h5>
+                </div>
+                <div class="play-button-case ">
+                    <div class="play-button-container " onclick="this.classList.toggle('play-button-active')">
+                        <div class="play-button play-button-before"></div>
+                        <div class="play-button play-button-after"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="pill ">
+                <img src="../assets/Deddi Corbuzier.jpeg" alt="" class="personal-pic">
+                <div class="items-container ">
+                    <h2 class="poppins-medium ">On To The Gym</h2>
+                    <h4 class="poppins-medium username-pill ">Deddy Corbuzier</h4>
+                    <input class="timeline " type="range" value="0" min="0" max="100" />
+                    <h5 class="poppins-medium time-track ">00.00 / 00.12</h5>
+                </div>
+                <div class="play-button-case ">
+                    <div class="play-button-container " onclick="this.classList.toggle('play-button-active')">
+                        <div class="play-button play-button-before"></div>
+                        <div class="play-button play-button-after"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="regis-section ">
+            <p class="poppins-medium">Register Your Account Here</p>
+            <div class="element-collection1 ">
+                <img src="../assets/Arrow 1.svg" alt="" class="">
+                <div class="button-case ">
+                    <a href="./login_page.html" id="regis" class="">Register Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div id="logo-footer" class="">
+            <img src="../assets/logo.svg" id="logo-img-footer" alt="Logo" class="">
+            <img src="../assets/WEDIO.svg" id="brand-footer" alt="WEDIO" class="">
+        </div>
+        <div class="footer-info">
+            <div class="info-sect">
+                <p class="poppins-bold info-title">WEDIO HQ</p>
+                <p class="poppins-regular info-text">
+                    Jl. Jalur Sutera Bar. No.Kav. 21,<br>
+                    RT.001/RW.004, Panunggangan,<br>
+                    Kec. Pinang, Kota Tangerang, Banten,<br>
+                    15143</p>
+            </div>
+            <div class="info-sect">
+                <p class="poppins-bold info-title">PROGRAM</p>
+                
+            </div>
+            <div class="info-sect">
+                <p class="poppins-bold info-title">INFORMASI TERKAIT</p>
+            </div>
+            <div class="info-sect">
+                <p class="poppins-bold info-title">DOWNLOADS</p>
+                <img src="../assets/Logo PlayAppStore 1.svg" alt="" id="download-icons">
+            </div>
+        </div>
+        <br>
+        <div class="info-sect">
+            <p class="poppins-bold info-title">CONTACT US</p>
+            <div class="contact-us">
+                <img src="../assets/Gmail Icon.svg" alt="">
+                <p class="poppins-regular">wedio@wehearyou.com</p>
+            </div>
+            <br>
+            <div class="contact-us">
+                <img src="../assets/whatsap icon.svg" alt="">
+                <p class="poppins-regular">+62 817-8228-7880</p>
+            </div>
+        </div>
+        <br>
+        <div class="info-sect">
+            <p class="poppins-bold info-title">FOLLOW US</p>
+            <div class="contact-us">
+                <img src="../assets/Gmail Icon.svg" alt="">
+                <p class="poppins-regular">wedio@wehearyou.com</p>
+            </div>
+            
+        </div>
+
+    </footer>
+    <script src="../js/landing_page.js"></script>
 </body>
 </html>
