--- a/views/login_page.html
+++ b/views/login_page.html
@@ -3,34 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WEDIO - Login</title>
+    <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
     <div class="container1">
         <div class="container">
-            <h1>Wedio</h1>
-            <h2>Sign Up to listen to your friends</h2>
+            <div class="title-logo">
+                <img src="../assets/logo.svg" alt="" id="logo-img">
+                <img src="../assets/WEDIO.svg" alt="" id="brand-logo">
+            </div>
+            <h2 class="poppins-bold" id="signupnlisten">Sign Up and listen to your friends</h2>
             <div class="loginContainer">
-                <p>Log in with Facebook</p>
+                <img src="../assets/facebook.png" alt="">
+                <p class="poppins-medium">Log in with Facebook</p>
             </div>
             <div class="loginContainer">
-                <p>Log in with Gmail</p>
+                <img src="../assets/gmail.png" alt="">
+                <p class="poppins-medium">Log in with Gmail</p>
             </div>
             <div class="loginContainer">
-                <p>Log in with Apple Id</p>
+                <img src="../assets/apple-logo.png" alt="">
+                <p class="poppins-medium">Log in with Apple Id</p>
             </div>
             <div class="loginContainer">
-                <p>Log in with Microsoft</p>
+                <img src="../assets/microsoft.png" alt="">
+                <p class="poppins-medium">Log in with Microsoft</p>
             </div>
             <h2 class="line">OR</h2>
-            <div class="loginContainer">
-                <p>Create a new account</p>
-            </div>
+            <a href="register_page.html">
+                <button class="login">Create a new account</button>
+            </a>
         </div>      
-        <div>
-          <button class="back">&lt;- Back</button>
-         </div>
+        <a href="landing_page.html">
+            <button class="back"><img src="../assets/arrow.png" alt=""> Back</button>
+        </a>
     </div>
     <div class="connector">
         <a href=""> About</a>
@@ -42,7 +50,6 @@
         <a href="">Term</a>
         <a href="">Wedio</a>
     </div>
-        <footer>Ⓒ 2024 All Rights Reserved PT.Wedio</footer>
-
+    <footer>Ⓒ 2024 All Rights Reserved PT.Wedio</footer>
 </body>
 </html>
