Added terms of servide page and create post page, added loading screen feature when accessing the landing page

--- a/views/landing_page.html
+++ b/views/landing_page.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wedio</title>
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/landing_page.css">
 </head>
 <body >
     <header class="header ">
-        <div id="logo" class="">
-            <img src="../assets/logo.svg" id="logo-img" alt="Logo">
-            <img src="../assets/WEDIO.svg" id="brand" alt="WEDIO">
-        </div>
+            <div id="logo" class="">
+                <img src="../assets/logo.svg" id="logo-img" alt="Logo">
+                <img src="../assets/WEDIO.svg" id="brand" alt="WEDIO">
+            </div>
 
         <!-- Button not finished -->
         <div class="button-case">
