--- a/views/login_page.html
+++ b/views/login_page.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEDIO - Login</title>
+    <title>Wedio-Login</title>
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
     <div class="container1">
         <div class="container">
-            <div class="title-logo">
-                <img src="../assets/logo.svg" alt="" id="logo-img">
-                <img src="../assets/WEDIO.svg" alt="" id="brand-logo">
-            </div>
+            <a href="load_screen.html">
+                <div class="title-logo">
+                    <img src="../assets/logo.svg" alt="" id="logo-img">
+                    <img src="../assets/WEDIO.svg" alt="" id="brand-logo">
+                </div>
+            </a>
             <h2 class="poppins-bold" id="signupnlisten">Sign Up and listen to your friends</h2>
             <div class="loginContainer">
                 <img src="../assets/facebook.png" alt="">
@@ -47,7 +49,7 @@
         <a href="">Privacy</a>
         <a href="">Jobs</a>
         <a href="">Location</a>
-        <a href="">Term</a>
+        <a href="terms_service.html">Term</a>
         <a href="">Wedio</a>
     </div>
     <footer>Ⓒ 2024 All Rights Reserved PT.Wedio</footer>
