--- a/views/chat_page.html
+++ b/views/chat_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat</title>
+    <title>Wedio-Chat</title>
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/home_page.css">
     <link rel="stylesheet" href="../css/playbar.css">
@@ -13,10 +13,12 @@
 <body>
     <div class="container">
         <div class="left">
-            <div class="title-logo">
-                <img src="../assets/logo.svg" alt="" id="logo-img">
-                <img src="../assets/WEDIO.svg" alt="" id="brand-logo">
-            </div>    
+            <a href="load_screen.html">
+                <div class="title-logo">
+                    <img src="../assets/logo.svg" alt="" id="logo-img">
+                    <img src="../assets/WEDIO.svg" alt="" id="brand-logo">
+                </div>    
+            </a>
             <a href="home_page.html">
                 <button id="home">
                     <i class="fa fa-home"></i>
