--- a/views/register_page.html
+++ b/views/register_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wedio-Register</title>
     <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href = "../css/popup.css">
 </head>
@@ -35,7 +35,7 @@
         <a href="">Privacy</a>
         <a href="">Jobs</a>
         <a href="">Location</a>
-        <a href="">Term</a>
+        <a href="terms_service.html">Term</a>
         <a href="">Wedio</a>
     </div>
         <footer>Ⓒ 2024 All Rights Reserved PT.Wedio</footer>
