Fixed landing page routing for the 'Register Now' button to the register page, and removed the warning div element (commented out)

--- a/views/load_screen.html
+++ b/views/load_screen.html
@@ -47,7 +47,7 @@
         </div>
 
         <!-- Please remove when routing corrected -->
-        <div class="warn">Press anything to continue ... [This will be removed]</div>
+        <!-- <div class="warn">Press anything to continue ... [This will be removed]</div> -->
     </div>
 
     <div class="main-cont">
