--- a/views/landing_page.html
+++ b/views/landing_page.html
@@ -101,7 +101,7 @@
             <div class="element-collection1 ">
                 <img src="../assets/Arrow 1.svg" alt="" class="">
                 <div class="button-case ">
-                    <a href="./login_page.html" id="regis" class="">Register Now</a>
+                    <a href="./register_page.html" id="regis" class="">Register Now</a>
                 </div>
             </div>
         </div>
